--- a/index.html
+++ b/index.html
@@ -41,6 +41,17 @@
             </ul>
         </nav>
 
+        <h2>Project examples</h2>
+        <nav>
+            <ul class="main-nav">
+
+                <ul class="sub-nav">
+                    <li><a href="projects/projects.html">Projects</a>
+                      <li><h4>notes-app</h5></li>
+                      <li><a href="projects/notes-app/index.html">notes-app</a>
+                </ul>
+            </ul>
+        </nav>
 
 
         <h1>Basics</h1>
