--- a/pages/arrays/sorting-arrays.html
+++ b/pages/arrays/sorting-arrays.html
@@ -25,6 +25,7 @@
               <div class="col-6">
                 <p>sort() puts alpha strings in alpa order.</p>
                 <p>This prints: Apple,Banana,Mango</p>
+                <p>NOTE: The original Array is altered when using sort()</p>
               </div>
               <div class="col-6">
       <pre class="example"><span class="code-js">var fruits = ["Banana", "Apple", "Mango"];
@@ -304,6 +305,173 @@ function displayCars() {
             </div>
         </div>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <h3>Another example of sorting Object Arrays</h3>
+        <div class="row">
+            <div class="col-6">
+                <p>This example sorts the objects by their title in Alpha order.</p>
+                <p>NOTE: Uppercase comes before lowercase in Alpha order. So you should always use the toLowerCase() function</p>
+                          </div>
+            <div class="col-6">
+                <pre class="example"><span class="code-js">const notes = [{
+    title: 'my next trip',
+    body: 'I would like to go to Spain'
+}, {
+    title: 'Habbits to work on',
+    body: 'Exercise. Eating a bit better.'
+}, {
+    title: 'Office modification',
+    body: 'Get a new seat'
+}]
+
+
+const sortNotes = function (notesArray) {
+    <span class="code-comment">//Sort the Array by passing a comparion function
+    //a and b are Objects from the Array</span>
+    notesArray.sort(function (a, b) {
+        <span class="code-comment">//if a should come before b, return FALSE so nothing happens</span>
+        if (a.title.toLowerCase() < b.title.toLowerCase()) {
+            return -1
+        <span class="code-comment">//if b should come before a, return true</span>
+        } else if (b.title.toLowerCase() < a.title.toLowerCase()) {
+            return 1
+        <span class="code-comment">//if their order is the same</span>
+        } else {
+            return 0
+        }
+    })
+}
+
+sortNotes(notes)
+console.log(notes)</span></pre>
+            </div>
+        </div>
+
+        <h5>Output</h5>
+        <div class="row">
+            <div class="col-6">
+
+                <p class="code-output">This example outputs the Objects in Alpha order by their title:</p>
+            </div>
+
+            <div class="col-6">
+                <pre class="example"><span class="code-output">[ { title: 'Habbits to work on',
+    body: 'Exercise. Eating a bit better.' },
+  { title: 'my next trip', body: 'I would like to go to Spain' },
+  { title: 'Office modification', body: 'Get a new seat' } ]
+</span></pre>
+            </div>
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <h3>Sort todo list by incomplete items first</h3>
+        <div class="row">
+            <div class="col-6">
+                <p>This example sorts the objects by their title in Alpha order.</p>
+                <p>NOTE: Uppercase comes before lowercase in Alpha order. So you should always use the toLowerCase() function</p>
+                          </div>
+            <div class="col-6">
+                <pre class="example"><span class="code-js">const todos = [{
+    text: 'Order cat food',
+    completed: false
+}, {
+    text: 'Clean kitchen',
+    completed: true
+}, {
+    text: 'Buy food',
+    completed: true
+}, {
+    text: 'Do work',
+    completed: false
+}, {
+    text: 'Exercise',
+    completed: true
+}]
+
+const sortTodos = function (todos) {
+    todos.sort(function (a, b) {
+        if (!a.completed && b.completed) {
+            return -1
+        } else if (!b.completed && a.completed) {
+            return 1
+        } else {
+            return 0
+        }
+    })
+}
+
+
+sortTodos(todos)
+console.log(todos)</span></pre>
+            </div>
+        </div>
+
+        <h5>Output</h5>
+        <div class="row">
+            <div class="col-6">
+
+                <p class="code-output">This example outputs the Objects in Alpha order by their title:</p>
+            </div>
+
+            <div class="col-6">
+                <pre class="example"><span class="code-output">[ { text: 'Order cat food', completed: false },
+  { text: 'Do work', completed: false },
+  { text: 'Clean kitchen', completed: true },
+  { text: 'Buy food', completed: true },
+  { text: 'Exercise', completed: true } ]</span></pre>
+            </div>
+        </div>
     </section>
 
 
