--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
                     <li><a href="projects/projects.html">Projects</a>
                       <li><h4>notes-app</h5></li>
                       <li><a href="projects/notes-app/index.html">notes-app</a>
+                        <li><a href="projects/live-filter-text/project.html">live filter text</a></li>
+                        <li><a href="projects/note-taking-app/project.html">Note taking app</a></li>
+
                 </ul>
             </ul>
         </nav>
