--- a/index.html
+++ b/index.html
@@ -9,45 +9,57 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="_css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="_css/style.css">
-
+    <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <title>JavaScript Tutorial</title>
 </head>
 
 <body>
 
     <section class="container">
-        <h1>Table of Contents</h1>
 
+        <div id="tutorial-link-section">
+            <div class="row">
+                <div class="col-4">
+                    <a href="../my-html-tutorial/index.html" target="_blank"><button type="button" class="btn btn-outline-primary">HTML</div></button></a>
+                    <div class="col-4">
+                        <a href="../css-tutorial/index.html" target="_blank"><button type="button" class="btn btn-outline-primary">CSS</button></a>
+                    </div>
+                    <div class="col-4">
+                        <a href="../my-bootstrap-tutorial/index.html" target="_blank"><button type="button" class="btn btn-outline-primary">Bootstrap</button></a>
+                    </div>
+                </div>
+              </div>
 
+                <p class="toc-heading1">References</p>
+                <p class="toc-heading2">Links and References</p>
+                <nav>
+                    <ul class="main-nav">
 
-        <h1>References</h1>
-        <h2>Links and References</h2>
-        <nav>
-            <ul class="main-nav">
+                        <ul class="sub-nav">
+                            <li><a href="pages/basics/links.html">Links and references</a></li>
+                        </ul>
+                    </ul>
+                </nav>
 
-                <ul class="sub-nav">
-                    <li><a href="pages/basics/links.html">Links and references</a></li>
-                </ul>
-            </ul>
-        </nav>
+                <p class="toc-heading2">Test page</p>
+                <nav>
+                    <ul class="main-nav">
 
-        <h2>Test page</h2>
-        <nav>
-            <ul class="main-nav">
+                        <ul class="sub-nav">
+                            <li><a href="examples/test-page.html">Test Page</a>
+                        </ul>
+                    </ul>
+                </nav>
 
-                <ul class="sub-nav">
-                    <li><a href="examples/test-page.html">Test Page</a>
-                </ul>
-            </ul>
-        </nav>
+                <p class="toc-heading2">Project examples</p>
+                <nav>
+                    <ul class="main-nav">
 
-        <h2>Project examples</h2>
-        <nav>
-            <ul class="main-nav">
-
-                <ul class="sub-nav">
-                    <li><a href="projects/projects.html">Projects</a>
-                      <li><h4>notes-app</h5></li>
+                        <ul class="sub-nav">
+                            <li><a href="projects/projects.html">Projects</a>
+                                <li>
+                                    <h4>notes-app</h5></li>
                       <li><a href="projects/notes-app/index.html">notes-app</a>
                         <li><a href="projects/live-filter-text/project.html">live filter text</a></li>
                         <li><a href="projects/note-taking-app/project.html">Note taking app</a></li>
@@ -57,7 +69,7 @@
         </nav>
 
 
-        <h1>Basics</h1>
+        <p class="toc-heading1">Basics</p>
         <nav>
             <ul class="main-nav">
 
@@ -76,7 +88,7 @@
             </ul>
         </nav>
 
-        <h2>Dates</h2>
+        <p class="toc-heading2">Dates</p>
         <nav>
             <ul class="main-nav">
 
@@ -90,7 +102,7 @@
             </ul>
         </nav>
 
-        <h2>Math and Numbers</h2>
+        <p class="toc-heading2">Math and Numbers</p>
         <nav>
             <ul class="main-nav">
 
@@ -102,7 +114,7 @@
         </nav>
 
 
-        <h2>Script examples</h2>
+        <p class="toc-heading2">Script examples</p>
         <nav>
             <ul class="main-nav">
 
@@ -113,7 +125,7 @@
             </ul>
         </nav>
 
-        <h2>Strings</h2>
+        <p class="toc-heading2">Strings</p>
         <nav>
             <ul class="main-nav">
 
@@ -128,7 +140,7 @@
 
 
 
-        <h1>Interacting with page content</h1>
+        <p class="toc-heading1">Interacting with page content</p>
         <nav>
             <ul class="main-nav">
 
@@ -152,71 +164,28 @@
         </nav>
 
 
-        <h1>Arrays, Functions, and Objects</h1>
-        <h2>Arrays</h2>
+        <p class="toc-heading1">Arrays, Functions, and Objects</p>
+        <p class="toc-heading2">Arrays</p>
         <nav>
             <ul class="main-nav">
 
                 <ul class="sub-nav">
                     <li>
                         <h5>Basics</h5></li>
-                    <li><a href="pages/arrays/arrays.html">Arrays</a>
-                        <ul>
-                            <li>ARRAY.lenth</li>
-                            <li>forEach()</li>
-                            <li>isArray()</li>
-                        </ul>
-                    </li>
-                    <li><a href="pages/arrays/array-iteration.html">Array Iteration</a>
-                        <ul>
-                            <li>forEach()</li>
-                            <li>map()</li>
-                            <li>filter()</li>
-                            <li>reduce()</li>
-                            <li>every()</li>
-                            <li>some()</li>
-                            <li>indexOf()</li>
-                            <li>lastIndexOf()</li>
-                            <li>find()</li>
-                            <li>findIndex()</li>
-                        </ul>
+                    <li><a href="pages/arrays/arrays.html">Arrays</a> - ARRAY.lenth, forEach(), isArray()</li>
+                    <li><a href="pages/arrays/array-iteration.html">Array Iteration</a> -
+                        forEach(), map(), filter(), reduce(), every(), some(), indexOf(), lastIndexOf(), find(),       findIndex()
                     </li>
                     <li>
                         <h5>Methods</h5></li>
-                    <li><a href="pages/arrays/editing-array-content.html">Editing Array Content</a>
-                        <ul>
-                            <li>splice()</li>
-                            <li>pop()</li>
-                            <li>shift()</li>
-                            <li>push()</li>
-                            <li>length</li>
-                            <li>unshift()</li>
-                            <li>slice()</li>
-                        </ul>
+                    <li><a href="pages/arrays/editing-array-content.html">Editing Array Content</a> -
+                        splice(), pop(),  shift(),  push(),  length,    unshift(),  slice(),
+
                     </li>
-                    <li><a href="pages/arrays/searching-an-array.html">Searching an Array</a>
-                      <ul>
-                          <li>indexOf()</li>
-                          <li>findIndexOf()</li>
-<li>find()</li>
-
-                        </ul></li>
-                    <li><a href="pages/arrays/arrays-and-strings.html">Arrays and Strings</a>
-                      <ul>
-                          <li>join()</li>
-                          <li>toString()</li>
-                          <li>split()</li>
-
-
-                        </ul></li>
+                    <li><a href="pages/arrays/searching-an-array.html">Searching an Array</a> -  indexOf(), findIndexOf(), find()</li>
+                    <li><a href="pages/arrays/arrays-and-strings.html">Arrays and Strings</a> - join(), toString(), split()</li>
                     <li><a href="pages/arrays/arrays-of-objects.html">Arrays of Objects</a></li>
-                    <li><a href="pages/arrays/sorting-arrays.html">Sorting Arrays contents</a>
-                      <ul>
-                          <li>sort()</li>
-                          <li>Math.max()</li>
-                            <li>Math.min()</li>
-
-                        </ul></li>
+                    <li><a href="pages/arrays/sorting-arrays.html">Sorting Arrays contents</a> - sort(),   Math.max(),   Math.min()</li>
                     <li><a href="pages/arrays/misc-array-methods.html">Misc Array methods</a>  <ul>
                           <li>reverse()</li></ul></li>
                 </ul>
@@ -225,7 +194,7 @@
 
 
 
-        <h2>Functions</h2>
+        <p class="toc-heading2">Functions</p>
         <nav>
             <ul class="main-nav">
 
@@ -246,7 +215,7 @@
         </nav>
 
 
-        <h2>Objects</h2>
+        <p class="toc-heading2">Objects</p>
         <nav>
             <ul class="main-nav">
 
