--- a/pages/functions/basic-functions.html
+++ b/pages/functions/basic-functions.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="../../_css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="../../_css/style.css">
-
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <title>Basic Functions</title>
 </head>
 
@@ -237,10 +237,11 @@ console.log(scoreText)</span></pre>
 
 
     <section class="container">
-        <h1 type="button" data-toggle="collapse" data-target="#3-types-of-functions" aria-expanded="false" aria-controls="3-types-of-functions">3 types of Functions</h1>
+        <h1 type="button" data-toggle="collapse" data-target="#3-types-of-functions" aria-expanded="false" aria-controls="3-types-of-functions">3 types of Functions&nbsp;<i class="far fa-arrow-alt-circle-down"></i></h1>
 
 
         <div class="collapse" id="3-types-of-functions">
+
 
             <div class="row">
                 <div class="col">
