fixed homepage projects

--- a/projects/expense-tracker/expense-tracker.html
+++ b/projects/expense-tracker/expense-tracker.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" type="text/css" href="../_css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="../_css/style.css">
+    <link rel="stylesheet" type="text/css" href="../../_css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="../../_css/style.css">
 
     <title>Projects</title>
 </head>
 
 <body>
-    <a href="../index.html">Home page</a>
+    <a href="../../index.html">Home page</a>
 
     <section class="container">
         <h1>Expense tracker</h1>
@@ -107,8 +107,8 @@ console.log(account.getAccountSummary())</span></pre>
 
 
 
-    <script src="../_js/jquery.js"></script>
-    <script src="../_js/bootstrap.bundle.js"></script>
+    <script src="../../_js/jquery.js"></script>
+    <script src="../../_js/bootstrap.bundle.js"></script>
 </body>
 
 </html>
