--- a/projects/live-filter-text/live-filter-text.html
+++ b/projects/live-filter-text/live-filter-text.html
@@ -17,7 +17,7 @@
     <a href="../../index.html">Home page</a>
 
     <section class="container">
-        <h1>Expense tracker</h1>
+        <h1>Live Text Filter</h1>
 
 
 
