--- a/projects/note-taking-app/1_todo-app/project.html
+++ b/projects/note-taking-app/1_todo-app/project.html
@@ -7,17 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" type="text/css" href="../../_css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="../../_css/style.css">
+    <link rel="stylesheet" type="text/css" href="../../../_css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="../../../_css/style.css">
 
     <title>Live Filter Text</title>
 </head>
 
 <body>
-    <a href="../../index.html">Home page</a>
+    <a href="../../../index.html">Home page</a>
 
     <section class="container">
-        <h1>Todo App</h1>
+        <h1>Todo App (basic functionality)</h1>
 
 
 
@@ -215,8 +215,8 @@ document.querySelector('#search-text').addEventListener('input', function(e) {
 })</script>
 
 
-    <script src="../../_js/jquery.js"></script>
-    <script src="../../_js/bootstrap.bundle.js"></script>
+    <script src="../../../_js/jquery.js"></script>
+    <script src="../../../_js/bootstrap.bundle.js"></script>
 </body>
 
 </html>
