--- a/index.html
+++ b/index.html
@@ -29,216 +29,230 @@
                         <a href="../my-bootstrap-tutorial/index.html" target="_blank"><button type="button" class="btn btn-outline-primary">Bootstrap</button></a>
                     </div>
                 </div>
-              </div>
+            </div>
 
-                <p class="toc-heading1">References</p>
-                <p class="toc-heading2">Links and References</p>
-                <nav>
-                    <ul class="main-nav">
+            <p class="toc-heading1">References</p>
+            <p class="toc-heading2">Links and References</p>
+            <nav>
+                <ul class="main-nav">
 
-                        <ul class="sub-nav">
-                            <li><a href="pages/basics/links.html">Links and references</a></li>
-                        </ul>
+                    <ul class="sub-nav">
+                        <li><a href="pages/basics/links.html">Links and references</a></li>
                     </ul>
-                </nav>
+                </ul>
+            </nav>
 
-                <p class="toc-heading2">Test page</p>
-                <nav>
-                    <ul class="main-nav">
+            <p class="toc-heading2">Test page</p>
+            <nav>
+                <ul class="main-nav">
 
-                        <ul class="sub-nav">
-                            <li><a href="examples/test-page.html">Test Page</a>
-                        </ul>
+                    <ul class="sub-nav">
+                        <li><a href="examples/test-page.html">Test Page</a>
                     </ul>
-                </nav>
-
-                <p class="toc-heading2">Project examples</p>
-                <nav>
-                    <ul class="main-nav">
-
-                        <ul class="sub-nav">
-                            <li><a href="projects/projects.html">Projects</a>
-                                <li>
-                                    <h4>notes-app</h5></li>
-                      <li><a href="projects/notes-app/index.html">notes-app</a>
-                        <li><a href="projects/live-filter-text/project.html">live filter text</a></li>
-                        <li><a href="projects/note-taking-app/project.html">Note taking app</a></li>
-
                 </ul>
-            </ul>
-        </nav>
+            </nav>
 
 
-        <p class="toc-heading1">Basics</p>
-        <nav>
-            <ul class="main-nav">
 
-                <ul class="sub-nav">
-                    <li><a href="pages/basics/console.html">The browser console</a></li>
-                    <li><a href="pages/basics/displaying-data.html">Displaying data</a></li>
-                    <li><a href="pages/basics/linking-js.html">Linking JS to your page</a></li>
-                    <li><a href="pages/basics/operators.html">Operators</a></li>
-                    <li><a href="pages/basics/scope.html">Scope</a></li>
-                    <li><a href="pages/basics/this.html">this</a></li>
-                    <li><a href="pages/basics/typeof.html">typeof</a></li>
-                    <li><a href="pages/basics/variables.html">Variables and Scope</a></li>
-                    <li><a href="pages/basics/boolean.html">Boolean</a></li>
-                    <li><a href="pages/basics/if.html">if statements</a></li>
+
+
+
+
+
+
+
+            <p class="toc-heading1">Basics</p>
+            <nav>
+                <ul class="main-nav">
+
+                    <ul class="sub-nav">
+                        <li><a href="pages/basics/console.html">The browser console</a></li>
+                        <li><a href="pages/basics/displaying-data.html">Displaying data</a></li>
+                        <li><a href="pages/basics/linking-js.html">Linking JS to your page</a></li>
+                        <li><a href="pages/basics/operators.html">Operators</a></li>
+                        <li><a href="pages/basics/scope.html">Scope</a></li>
+                        <li><a href="pages/basics/this.html">this</a></li>
+                        <li><a href="pages/basics/typeof.html">typeof</a></li>
+                        <li><a href="pages/basics/variables.html">Variables and Scope</a></li>
+                        <li><a href="pages/basics/boolean.html">Boolean</a></li>
+                        <li><a href="pages/basics/if.html">if statements</a></li>
+                    </ul>
                 </ul>
-            </ul>
-        </nav>
+            </nav>
 
-        <p class="toc-heading2">Dates</p>
-        <nav>
-            <ul class="main-nav">
+            <p class="toc-heading2">Dates</p>
+            <nav>
+                <ul class="main-nav">
 
-                <ul class="sub-nav">
-                    <li><a href="pages/basics/dates.html">Dates</a></li>
-                    <li><a href="pages/basics/dates-formats.html">Date Formats</a></li>
-                    <li><a href="pages/basics/retrieving-dates.html">Retrieving Dates</a></li>
-                    <li><a href="pages/basics/setting-dates.html">Setting Dates</a></li>
+                    <ul class="sub-nav">
+                        <li><a href="pages/basics/dates.html">Dates</a></li>
+                        <li><a href="pages/basics/dates-formats.html">Date Formats</a></li>
+                        <li><a href="pages/basics/retrieving-dates.html">Retrieving Dates</a></li>
+                        <li><a href="pages/basics/setting-dates.html">Setting Dates</a></li>
 
+                    </ul>
                 </ul>
-            </ul>
-        </nav>
+            </nav>
 
-        <p class="toc-heading2">Math and Numbers</p>
-        <nav>
-            <ul class="main-nav">
+            <p class="toc-heading2">Math and Numbers</p>
+            <nav>
+                <ul class="main-nav">
 
-                <ul class="sub-nav">
-                    <li><a href="pages/basics/numbers.html">Numbers</a></li>
-                    <li><a href="pages/basics/number-methods.html">Number methods</a></li>
+                    <ul class="sub-nav">
+                        <li><a href="pages/basics/numbers.html">Numbers</a></li>
+                        <li><a href="pages/basics/number-methods.html">Number methods</a></li>
+                    </ul>
                 </ul>
-            </ul>
-        </nav>
+            </nav>
 
 
-        <p class="toc-heading2">Script examples</p>
-        <nav>
-            <ul class="main-nav">
+            <p class="toc-heading2">Script examples</p>
+            <nav>
+                <ul class="main-nav">
 
-                <ul class="sub-nav">
-                    <li><a href="pages/basics/syntax.html">Basic Syntax</a></li>
-                    <li><a href="pages/scripts/script-basics.html">Basic script examples</a></li>
+                    <ul class="sub-nav">
+                        <li><a href="pages/basics/syntax.html">Basic Syntax</a></li>
+                        <li><a href="pages/scripts/script-basics.html">Basic script examples</a></li>
+                    </ul>
                 </ul>
-            </ul>
-        </nav>
+            </nav>
 
-        <p class="toc-heading2">Strings</p>
-        <nav>
-            <ul class="main-nav">
+            <p class="toc-heading2">Strings</p>
+            <nav>
+                <ul class="main-nav">
 
-                <ul class="sub-nav">
-                    <li><a href="pages/basics/strings.html">Strings</a></li>
-                    <li><a href="pages/basics/string-methods.html">String Methods</a></li>
+                    <ul class="sub-nav">
+                        <li><a href="pages/basics/strings.html">Strings</a></li>
+                        <li><a href="pages/basics/string-methods.html">String Methods</a></li>
 
+                    </ul>
                 </ul>
-            </ul>
-        </nav>
+            </nav>
 
 
 
 
-        <p class="toc-heading1">Interacting with page content</p>
-        <nav>
-            <ul class="main-nav">
+            <p class="toc-heading1">Interacting with page content</p>
+            <nav>
+                <ul class="main-nav">
 
-                <ul class="sub-nav">
-                    <li><a href="pages/dom/accessing-the-dom.html">Accessing the DOM content</a></li>
-                    <li><a href="pages/dom/read-only-properties.html">Interacting with READ-ONLY properties</a></li>
-                    <li><a href="pages/dom/changing-attributes.html">Changing attributes</a></li>
-                    <li><a href="pages/dom/changing-css.html">Changing CSS</a></li>
-                    <li><a href="pages/dom/adding-elements.html">Adding elements to the DOM</a></li>
+                    <ul class="sub-nav">
+                        <li><a href="pages/dom/accessing-the-dom.html">Accessing the DOM content</a></li>
+                        <li><a href="pages/dom/read-only-properties.html">Interacting with READ-ONLY properties</a></li>
+                        <li><a href="pages/dom/changing-attributes.html">Changing attributes</a></li>
+                        <li><a href="pages/dom/changing-css.html">Changing CSS</a></li>
+                        <li><a href="pages/dom/adding-elements.html">Adding elements to the DOM</a></li>
 
-                    <li>
+                        <li>
 
-                        <h5>Events</h5></li>
-                    <li><a href="pages/events/events.html">Events</a></li>
-                    <li><a href="pages/events/the-event-object.html">The Event Object</a></li>
-                    <li><a href="pages/events/event-propagation.html">Event Propagation</a></li>
-                    <li><a href="pages/events/stopping-an-event.html">Stopping an Event</a></li>
+                            <h5>Events</h5></li>
+                        <li><a href="pages/events/events.html">Events</a></li>
+                        <li><a href="pages/events/the-event-object.html">The Event Object</a></li>
+                        <li><a href="pages/events/event-propagation.html">Event Propagation</a></li>
+                        <li><a href="pages/events/stopping-an-event.html">Stopping an Event</a></li>
 
+                    </ul>
                 </ul>
-            </ul>
-        </nav>
+            </nav>
 
 
-        <p class="toc-heading1">Arrays, Functions, and Objects</p>
-        <p class="toc-heading2">Arrays</p>
-        <nav>
-            <ul class="main-nav">
+            <p class="toc-heading1">Arrays, Functions, and Objects</p>
+            <p class="toc-heading2">Arrays</p>
+            <nav>
+                <ul class="main-nav">
 
-                <ul class="sub-nav">
-                    <li>
-                        <h5>Basics</h5></li>
-                    <li><a href="pages/arrays/arrays.html">Arrays</a> - ARRAY.lenth, forEach(), isArray()</li>
-                    <li><a href="pages/arrays/array-iteration.html">Array Iteration</a> -
-                        forEach(), map(), filter(), reduce(), every(), some(), indexOf(), lastIndexOf(), find(),       findIndex()
-                    </li>
-                    <li>
-                        <h5>Methods</h5></li>
-                    <li><a href="pages/arrays/editing-array-content.html">Editing Array Content</a> -
-                        splice(), pop(),  shift(),  push(),  length,    unshift(),  slice(),
+                    <ul class="sub-nav">
+                        <li>
+                            <h5>Basics</h5></li>
+                        <li><a href="pages/arrays/arrays.html">Arrays</a> - ARRAY.lenth, forEach(), isArray()</li>
+                        <li><a href="pages/arrays/array-iteration.html">Array Iteration</a> - forEach(), map(), filter(), reduce(), every(), some(), indexOf(), lastIndexOf(), find(), findIndex()
+                        </li>
+                        <li>
+                            <h5>Methods</h5></li>
+                        <li><a href="pages/arrays/editing-array-content.html">Editing Array Content</a> - splice(), pop(), shift(), push(), length, unshift(), slice(),
 
-                    </li>
-                    <li><a href="pages/arrays/searching-an-array.html">Searching an Array</a> -  indexOf(), findIndexOf(), find()</li>
-                    <li><a href="pages/arrays/arrays-and-strings.html">Arrays and Strings</a> - join(), toString(), split()</li>
-                    <li><a href="pages/arrays/arrays-of-objects.html">Arrays of Objects</a></li>
-                    <li><a href="pages/arrays/sorting-arrays.html">Sorting Arrays contents</a> - sort(),   Math.max(),   Math.min()</li>
-                    <li><a href="pages/arrays/misc-array-methods.html">Misc Array methods</a>  <ul>
-                          <li>reverse()</li></ul></li>
+                        </li>
+                        <li><a href="pages/arrays/searching-an-array.html">Searching an Array</a> - indexOf(), findIndexOf(), find()</li>
+                        <li><a href="pages/arrays/arrays-and-strings.html">Arrays and Strings</a> - join(), toString(), split()</li>
+                        <li><a href="pages/arrays/arrays-of-objects.html">Arrays of Objects</a></li>
+                        <li><a href="pages/arrays/sorting-arrays.html">Sorting Arrays contents</a> - sort(), Math.max(), Math.min()</li>
+                        <li><a href="pages/arrays/misc-array-methods.html">Misc Array methods</a>
+                            <ul>
+                                <li>reverse()</li>
+                            </ul>
+                        </li>
+                    </ul>
                 </ul>
-            </ul>
-        </nav>
+            </nav>
 
 
 
-        <p class="toc-heading2">Functions</p>
-        <nav>
-            <ul class="main-nav">
+            <p class="toc-heading2">Functions</p>
+            <nav>
+                <ul class="main-nav">
 
-                <ul class="sub-nav">
-                    <li>
-                        <h5>Basics</h5></li>
-                    <li><a href="pages/functions/basic-functions.html">Basic Functions</a></li>
-                    <li><a href="pages/functions/immediately-invoked-functions.html">Immediately Invoked Functions</a></li>
-                    <li><a href="pages/functions/invoking-functions.html">Invoking Functions</a></li>
-                    <li>
-                        <h5>Topics</h5></li>
-                    <li><a href="pages/functions/closures.html">Closures</a></li>
-                    <li><a href="pages/functions/hoisting.html">Hoisting</a></li>
-                    <li><a href="pages/functions/modules.html">Modules</a></li>
-                    <li><a href="pages/functions/namespacing.html">Namespacing</a></li>
+                    <ul class="sub-nav">
+                        <li>
+                            <h5>Basics</h5></li>
+                        <li><a href="pages/functions/basic-functions.html">Basic Functions</a></li>
+                        <li><a href="pages/functions/immediately-invoked-functions.html">Immediately Invoked Functions</a></li>
+                        <li><a href="pages/functions/invoking-functions.html">Invoking Functions</a></li>
+                        <li>
+                            <h5>Topics</h5></li>
+                        <li><a href="pages/functions/closures.html">Closures</a></li>
+                        <li><a href="pages/functions/hoisting.html">Hoisting</a></li>
+                        <li><a href="pages/functions/modules.html">Modules</a></li>
+                        <li><a href="pages/functions/namespacing.html">Namespacing</a></li>
+                    </ul>
                 </ul>
-            </ul>
-        </nav>
+            </nav>
 
 
-        <p class="toc-heading2">Objects</p>
-        <nav>
-            <ul class="main-nav">
+            <p class="toc-heading2">Objects</p>
+            <nav>
+                <ul class="main-nav">
 
-                <ul class="sub-nav">
-                    <li><a href="pages/objects/objects.html">Objects</a></li>
-                    <li><a href="pages/objects/methods.html">Methods</a></li>
-                    <li><a href="pages/objects/prototypal-inheritance.html">Prototypal Inheritance</a></li>
-                    <li><a href="pages/objects/object-constructors.html">Object Constructors</a></li>
+                    <ul class="sub-nav">
+                        <li><a href="pages/objects/objects.html">Objects</a></li>
+                        <li><a href="pages/objects/methods.html">Methods</a></li>
+                        <li><a href="pages/objects/prototypal-inheritance.html">Prototypal Inheritance</a></li>
+                        <li><a href="pages/objects/object-constructors.html">Object Constructors</a></li>
+                    </ul>
                 </ul>
+            </nav>
+
+
+
+
+
+
+            <p class="toc-heading1">Project examples</p>
+            <h3>Expense Tracker</h3>
+            <ul>
+                <li><a href="projects/expense-tracker/expense-tracker.html">JS only expense tracker</a></li>
             </ul>
-        </nav>
+
+            <h3>Live Text Filter</h3>
+            <ul>
+                <li><a href="projects/live-filter-text/live-filter-text.html">Live Text Filter</a></li>
+            </ul>
+
+            <h3>Notes App</h3>
+            <h4>Basic functionality</h4>
+            <ul>
+                <li><a href="projects/note-taking-app/1_notes-app/index.html">Note taking app (basic functionality)</a></li>
+                <li><a href="projects/note-taking-app/1_todo-app/project.html">Todo app (basic functionality)</a></li>
+            </ul>
+            <h4>Added functionality</h4>
+            <ul>
+                <li><a href="projects/note-taking-app/2_notes-app/index.html">Note taking app (added functionality)</a></li>
+                <li><a href="projects/note-taking-app/2_todo-app/index.html">Todo app (added functionality)</a></li>
+            </ul>
 
 
 
-
-
-
-
-
-
-
-        <script src="_js/jquery.js"></script>
-        <script src="_js/bootstrap.bundle.js"></script>
+            <script src="_js/jquery.js"></script>
+            <script src="_js/bootstrap.bundle.js"></script>
 </body>
 
 </html>
