--- a/projects/note-taking-app/1_notes-app/index.html
+++ b/projects/note-taking-app/1_notes-app/index.html
@@ -3,6 +3,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <title>#1 Note taking app</title>
         <style>
         .note {
           background-color: blue;
@@ -10,7 +11,7 @@
         </style>
     </head>
     <body>
-      <h1>Notes App</h1>
+      <h1>Notes App (basic functionality)</h1>
       <h2>Take notes and never forget</h2>
       <input id="search-text" type="text" placeholder="Filter todos">
       <p class="note">This application was created by Andrew Mead</p>
